# KnockoffMuzero

./: .gitignore  README.md  experiments.md  plan.md  pyproject.toml
configs/: _schema.py  bitfall.yaml  bitfall_003.yaml  bitfall_004.yaml  bitfall_005.yaml  bitfall_006.yaml  bitfall_007.yaml  bitfall_big.yaml  bitfall_big_smoke.yaml  bitfall_harder.yaml  bitfall_smoke.yaml  cartpole.yaml  cartpole_smoke.yaml  tictactoe.yaml  tictactoe_smoke.yaml
muzero/: config.py  main.py
muzero/ai/: types.py
muzero/ai/nn/: losses.py  manager.py  networks.py
muzero/ai/rl/: episode_buffer.py
muzero/ai/search/: asm.py  node.py  umcts.py
muzero/io/: checkpoint.py  logging.py
muzero/rl/: rlm.py
muzero/simworlds/: __init__.py  base.py  bitfall.py  gymwrapper.py  tictactoe.py
muzero/viz/: pygame_renderer.py  training_plots.py  tree_viewer.py
scripts/: audit_config.py  evaluate.py  evaluate_h2h.py  probe_representation.py
scripts/idun/: evaluate.slurm  setup_env.sh  sweep.slurm  train.slurm  train_cpu.slurm
tests/: test_end_to_end_overfit.py  test_episode_buffer.py  test_import_boundary.py  test_loss_shapes.py  test_networks_shapes.py  test_simworld_bitfall.py  test_simworld_tictactoe.py  test_umcts_invariants.py
